src/objects/MUSW__ListViewCache__c.object
<CustomObject>
    <fields>
        <fullName>MUSW__BG_Fields__c</fullName>
        <label>Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Filters__c</fullName>
        <label>Filters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ListView Cache</label>
    <nameField>
        <label>ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ListView Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>